classic repertoire, ignore this

--- a/static/css/me.css
+++ b/static/css/me.css
@@ -1,3 +1,22 @@
+
+
+
+img{
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
 ul{
     list-style: none;
 }
