--- a/templates/classicrepertoire.html
+++ b/templates/classicrepertoire.html
@@ -3,10 +3,11 @@
 <head th:replace="_fragments :: head(~{::title})">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>婺剧简介</title>
+  <title>经典剧目</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}">
 </head>
+
 <body>
 
   <!--导航-->
@@ -117,10 +118,10 @@
           <div class="ui top attached segment">
             <div class="ui middle aligned two column grid">
               <div class="column">
-                <h3 class="ui teal header">博客</h3>
+                <h3 class="ui teal header">经典剧目</h3>
               </div>
               <div class="right aligned column">
-                共 <h2 class="ui orange header m-inline-block m-text-thin"> 14 </h2> 篇
+                 <h2 class="ui orange header m-inline-block m-text-thin"> 5 </h2> 幕
               </div>
             </div>
           </div>
@@ -131,54 +132,31 @@
             <div class="ui padded vertical segment m-padded-tb-large">
               <div class="ui mobile reversed stackable grid">
                 <div class="sixteen wide column">
-                  <h3 class="ui header">你知道什么是婺剧吗？</h3>
-                  <p class="m-text">婺剧，俗称金华戏，含六种声腔。从六种声腔产生的时间先后排序，最早是产生于500多年前明代的高腔，依次
-                    是昆曲、乱弹、徽戏，这四种声腔在清代中期已表现为相对成熟独立的四个剧种，涵括了中国戏曲大类的主要单声腔剧种；清末，金华、
-                    衢州一带的徽班和乱弹班，将本地的说唱艺术滩簧和时调陆续搬上舞台，于是又增添了滩簧和时调两种声腔。至新中国成立，“兼收并蓄”，
-                    统称为婺剧。
-                  </p>
-                  <p class="m-text">
 
-                    婺剧传统剧目和唱调音乐十分丰富，剧目有500多本，曲牌数以千计，并显有历史特征和地域特征，被专家学者誉为“明清戏曲文化博
-                    物馆”。乱弹与北方梆子戏同源，主干曲调为双调体：［三五七］与［二凡］配套；［芦花］与［拨子］配套。乱弹戏有《昆仑女》和拍
-                    成电影的《西施泪》等。徽戏源自安徽，主干曲调为［西皮］与［二簧 ］，至今保留着正宗徽戏的本色、原味，未受京剧倒流影响，被梅兰
-                    芳先生视为“京剧的祖宗”，故而特具“非遗”传承价值。徽戏多宫廷戏、骨子戏，如《打金枝》、《辕门斩子》等。滩簧的主干曲调是［平板］和
-                    ［弦索］，代表作有《断桥》、《僧尼会》、《对课》等。高腔，非主干曲牌结构，以辞敷曲，似唱似吟，“一人启口，众人接腔”，代表剧目如：
-                    《合珠记·米糷敲窗》、时装戏《红霞》等。当前舞台演出，乱弹和徽戏居多，其次是滩簧和高腔，昆曲和时调较少。
-                  </p>
-                  <p class="m-text">
-                    舞台表演，乡土气息浓郁，粗放强烈；重武功，多特技，善夸张，见长文戏武做；有“大花过头，老生平耳，小生平肩，花旦平乳，小
-                    丑平脐”等动作特点。六种声腔，分腔分治，唱调、唱腔音乐多姿多彩，主奏乐器各不相同，尤以乱弹，因具风格独特的支声复调音乐而著称。
-                  </p>
-                  <p class="m-text">
-                    20世纪50年代，婺剧获得前所未有的绝好发展机遇，经周越先、徐汝英、周越桂、葛素云等前辈老师的悉心传授、培育下，以郑兰香、
-                    吴光煜为杰出代表的一代婺剧人，迅速成长，新老同台，革故鼎新，婺剧艺术迅速提升，赋予婺剧时代精神以展现地方文化的艺术品格，
-                    使长期兴盛于农村的草台艺术，成为广受城市观众所喜闻乐见的剧场艺术，婺剧艺术不再是传统意义上的“花部”——农民戏。1962年婺剧首次
-                    登上首都舞台，倾倒了首都观众，震动了戏曲界，受到中央领导的肯定和赞扬，周恩来总理三次观看并接见演职员。《人民日报》、《光明日报》
-                    等首都媒体，均载文盛赞成功演出。时任中国戏剧家协会主席田汉，观后有感，赋诗一首：“璞玉浑金尚可求，英雄儿女入燕幽。浙东何止山川美
-                    ，又有新声说婺州。”众多专家学者的高度评价，是对婺剧在中国戏曲史中特殊地位和艺术价值的认同，对提高婺剧知名度乃至日后的传承发展影响深远。
-                  </p>
-                  <p class="m-text">
-                    进入新世纪以来，尽管戏曲不景气，身为婺剧龙头的浙江婺剧艺术研究院，依然生机盎然，展现出当今婺剧根在农村、枝在城市、花开境
-                    外的新景象。以中国戏剧“二度梅”获得者陈美兰为代表的又一代婺剧人，矢志不渝，追求艺术创新，通过创排《昆仑女》、《梦断婺江》、
-                    青春版《穆桂英》、《铁血红颜》等新型剧目，在继承婺剧传统特色的基础上，将婺剧艺术推向更高层面。2008年6月，婺剧经国务院批准列
-                    入第二批国家级非物质文化遗产名录；2020年5月，婺剧入选首批“浙江文化印记”。
-                  </p>
-                  <p class="m-text">
-                    婺剧，正如中国剧协原副主席郭汉城所说：婺剧是一个很有前途的剧种，它沐浴着时代的光辉继续在前进的路上……
-                  </p>
+
+                  <div style="padding: 30px">
+                    <img src="../static/images/repertoire/img01.png" alt="" style="width: 11em;height: 15em;margin-right: 36px" title="你好呀">
+                    <img src="../static/images/repertoire/img02.png" alt="" style="width: 11em;height: 15em;margin-right: 36px">
+                    <img src="../static/images/repertoire/img03.png" alt="" style="width: 11em;height: 15em">
+
+                    <img src="../static/images/repertoire/img01.png" alt="" style="width: 11em;height: 15em;margin-right: 36px;margin-top: 36px" title="你好呀">
+                    <img src="../static/images/repertoire/img02.png" alt="" style="width: 11em;height: 15em;margin-right: 36px">
+                    <img src="../static/images/repertoire/img03.png" alt="" style="width: 11em;height: 15em">
+
+
+                  </div>
+
                   <div class="ui grid">
                     <div class="sixteen wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
-                          <img src="/static/images/tutui.jpg" alt="" class="ui avatar image">
-                          <div class="content"><a href="#" class="header">C_T_X</a></div>
+                          2022-08-16
                         </div>
                         <div class="item">
-                          <i class="calendar icon"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022-08-16
-                        </div>
-                        <div class="item">
-                          <i class="calendar icon"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          <i class="calendar icon"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         </div>
                         <div class="item">
                           <i class="eye icon"></i> 1954
@@ -189,6 +167,8 @@
                       </div>
                     </div>
                   </div>
+
+
                 </div>
               </div>
             </div>
