--- a/templates/videos.html
+++ b/templates/videos.html
@@ -43,7 +43,7 @@
     </li>
     <li class="drop-down"><a href="#">经典剧目</a>
       <ul class="drop-down-content">
-        <li><a href="#">经典剧目</a></li>
+        <li><a href="classicrepertoire.html">经典剧目</a></li>
         <li><a href="#">演出剧照</a></li>
       </ul>
     </li>
